# Camera-Monitor-Set-Client

./: .gitignore  CMakeLists.txt  README.md  ipcam
config/: MRAAConfig.cmake
include/: audio.h  connection.h  utils.h  video.h
libs/libv4l2cpp/: CMakeLists.txt  Makefile
libs/libv4l2cpp/inc/: logger.h
libs/libv4l2cpp/src/: V4l2Capture.cpp
libs/performanceLib/: CMakeLists.txt  performanceLib.cpp  performanceLib.h
libs/recordLib/: CMakeLists.txt  recordLib.cpp  recordLib.h  recordLib.old.cpp
libs/tcpClient/: CMakeLists.txt  tcpClient.cpp  tcpClient.h
libs/tcpServer/: CMakeLists.txt  tcpServer.cpp  tcpServer.h
libs/udpBroadcast/: CMakeLists.txt  udpBroadcast.cpp  udpBroadcast.h
libs/udpClient/: CMakeLists.txt  udpClient.cpp  udpClient.h
src/: audio.cpp  connection.cpp  main.cpp  main_test.cpp  utils.cpp  video.cpp
src/failover/: wrapper.cpp
